when I have some more ideas.

The only solution is to remap the keyboard using xmodmaps and/or mapping for
special characters using the Map Keys dialog.  I do not like this at all and is
a huge hack for linux.  If you do not believe me take a look at the Java Bug
Database for all the problems with this in linux.

Enhancements/Change Log
-----------------------
22/07/2002  Added changes from Maurizio to add an all-dep build target to the
            ant build.xml file.

            Added changes to the antbuild.txt file from Maurizio.

            Fixed session jumping for MDI interface.

21/07/2002  Added short cuts accelerators to popup menus.

            Another attempt at fixing a NULL error on keybuffering.

19/07/2002  Added short cuts to key mapping screen so now you are able to remap
            these keys as well.

15/07/2002  Added a message area for option message text to be attached to the
            e-mail.

12/07/2002  Made the connection dialog highlight the default session selection
            if one is specified.

            Fixed another problem with sys request dialog pane where the default
            option was not responding to key strokes.  I have now tested this on
            windows 1.3.0 through 1.4.0 and linux 1.4.0.  Thanks Irene for the
            report.

            Added a new button to connection dialog to apply changes.

            Added a new check box to connection dialog to show connection dialog
            at startup.  If you want the default option to be started without
            this prompt deselect this box.

11/07/2002  Fixed a problem when changing the colors the separator line in the
            Operator Information Area was not being repainted.

            Miscellaneous painting problems fixes.

10/07/2002  Added support for two new keys - dup and new line.  Thanks for the
            request Roy.  You will have to map these two keys if you already
            have a keymap.
