@@ -38,6 +38,7 @@ popup.email=via E-Mail
 popup.file=To File
 popup.keyboard=Keyboard
 popup.connections=Connections
+popup.shortCuts=Short Cuts
 
 # Hex Map literals
 hm.title=Hex Map
